--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Gochi+Hand&display=swap');
 .mainCont {
   text-align: center;
   font-size: 7rem;
@@ -5,6 +6,7 @@
 }
 #counter {
   font-size: 12rem;
+  font-family: 'Gochi Hand', cursive;
 }
 @media only screen and (max-width: 700px) {
   .mainCont {
